new user guide ipynb

--- a/_posts/python/getting-started/getting-started.ipynb
+++ b/_posts/python/getting-started/getting-started.ipynb
@@ -328,10 +328,10 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'privacy.ipynb', 'python/getting-started', 'Getting Started Plotly for Python',\n",
+    "    'getting-started.ipynb', 'python/getting-started', 'Getting Started Plotly for Python',\n",
     "    'Getting Started with Plotly for Python',\n",
     "    title = 'Getting Started Plotly for Python',\n",
-    "    thumbnail='/images/getting-started.png', language='python',\n",
+    "    thumbnail='', language='python',\n",
     "    layout='getstart', has_thumbnail='false') "
    ]
   },
@@ -361,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
