change address to thumbnail

--- a/_posts/python/3d-scatter/3d_scatter.ipynb
+++ b/_posts/python/3d-scatter/3d_scatter.ipynb
@@ -240,7 +240,7 @@
     "    '3d_scatter.ipynb', 'python/3d-scatter-plots/', '3D Python Scatter Plots | plotly',\n",
     "    'How to make 3D scatter plots in Python with Plotly.',\n",
     "    name = '3D Scatter Plots',\n",
-    "    thumbnail='/images/3d-scatter.jpg', language='python',\n",
+    "    thumbnail='thumbnail/3d-scatter.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=1)"
    ]
   },
