update 3d scatter ex

--- a/_posts/python/3d-scatter/3d_scatter.ipynb
+++ b/_posts/python/3d-scatter/3d_scatter.ipynb
@@ -241,7 +241,7 @@
     "    'How to make 3D scatter plots in Python with Plotly.',\n",
     "    name = '3D Scatter Plots',\n",
     "    thumbnail='thumbnail/3d-scatter.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=1)"
+    "    page_type='example_index', has_thumbnail='true', display_as='3d_charts', order=1)"
    ]
   },
   {
@@ -270,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
