first page of new user guide

--- a/_posts/user_guide_python/user-g.ipynb
+++ b/_posts/user_guide_python/user-g.ipynb
@@ -4,30 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Plotly for Python User Guide"
+    "# Plotly for Python User Guide "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "<iframe width=\"900\" height=\"800\" frameborder=\"0\" scrolling=\"no\" src=\"https://plot.ly/~kevintest/21.embed\"></iframe>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\n",
+    "This user guide will provide an in-depth overview of the steps required to get you first `Plotly` graph up and running, as well more specific and thorough guides on a few of our most popular chart types. Hopefully by the end of the user guide you will have a good idea of how Plotly graphs are defined and constructed, and be on your way to creating amazing data visualizations of your own. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is the Python API for Plotly?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "      \n",
+    "As you may know, Plotly is software written to enable users to easily create beautiful interactive plots and graphs to visualize data. All plots are generated using our [javascript library](https://plot.ly/javascript), but we have multiple API's that will allow us to create these plots in our preferred language. Thus the purpose of the Python API is to allow users to generate these plots within a Python environment, including IPython Notebooks!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### User Guide Sections: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    \n",
+    "The user guide will be split into the following sections:\n",
+    "\n",
+    "0. [Getting Started with Plotly](https://plot.ly/python/overview)\n",
+    "1. [Line and Scatter Plots](https://plot.ly/python/line-and-scatter-plots-tutorial)\n",
+    "2. [Bar Charts](https://plot.ly/python/bar-charts-tutorial)\n",
+    "3. [Bubble Charts](https://plot.ly/python/bubble-charts-tutorial)\n",
+    "4. [Histograms and Box Plots](https://plot.ly/python/histograms-and-box-plots-tutorial)\n",
+    "\n",
+    "[Appendix A: Getting Started with Python](https://plot.ly/python/python-tutorial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "### Want to know what's going on at Plotly? \n",
+    "\n",
+    "* Follow us on twitter: \n",
+    "[@plotlygraphs](https://twitter.com/plotlygraphs)\n",
+    "\n",
+    "### Issues or suggestions for the user guide? \n",
+    "\n",
+    "* Let us know at: [Plotly Community Support](http://community.plot.ly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -60,9 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n",
-      "\u001b[33mYou are using pip version 7.1.2, however version 8.0.2 is available.\r\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
     }
    ],
@@ -108,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
