--- a/_posts/r/scattergl/2016-02-25-scattergl.Rmd
+++ b/_posts/r/scattergl/2016-02-25-scattergl.Rmd
@@ -89,6 +89,35 @@ p
 
 <iframe src="https://plot.ly/~RPlotBot/2867/randwalkn-nrand-vs-1nrand/" width="100%" height=700 scrolling="no" seamless="seamless"></iframe>
 
+
+### WebGL for time series data
+```{r}
+library(plotly)
+
+# Read some weather data
+df <- read.csv('weather-data.csv')
+
+# Convert to dates
+df$Date <- zoo::as.Date(df$Date, format =  "%m/%d/%Y")
+
+# Plot using plotly
+
+plot_bgcolor <- "34495E"
+paper_bgcolor <- "E4F1FE"
+
+p <- plot_ly(df, x = Date, y = Mean_TemperatureC, name = "Mean Temp.", type = "scattergl", 
+             marker = list(color = "F6FFD2")) %>% 
+  layout(title = "Mean Temparature in Seattle (1948 - 2015)",
+         yaxis = list(title = "Temperature (<sup>o</sup>C)"),
+         plot_bgcolor = plot_bgcolor, 
+         paper_bgcolor = paper_bgcolor)
+
+p
+```
+
+<iframe src="https://plot.ly/~RPlotBot/2873/mean-temparature-in-seattle-1948-2015/" width="800px" height="600px" scrolling="no" seamless="seamless"></iframe>
+
+
 # Reference
 See https://plot.ly/python/reference/#scattergl for more information
 
