Updated examples for width of charts

--- a/_posts/r/scattergl/2016-02-25-scattergl-100000.md
+++ b/_posts/r/scattergl/2016-02-25-scattergl-100000.md
@@ -32,7 +32,7 @@ y <- 2*x + rnorm(n, sd = 5)
 p <- plot_ly(x = x, y = y, type = "scattergl", mode = "markers", marker = list(line = list(width = 2)))
 p
 ```
-<iframe src="https://plot.ly/~RPlotBot/2863" width="800px" height="600px" scrolling="no" seamless="seamless"></iframe>
+<iframe src="https://plot.ly/~RPlotBot/2863" width="950" height="600px" scrolling="no" seamless="seamless"></iframe>
 
 
 ### More examples
