--- a/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
+++ b/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -851,218 +851,7 @@
     {
      "data": {
       "text/html": [
-       "<style>\n",
-       "    div.cell{\n",
-       "        width: 850px;\n",
-       "        margin-left: 10% !important;\n",
-       "        margin-right: auto;\n",
-       "    }\n",
-       "    h1 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h1 {\n",
-       "        font-weight: 200;\n",
-       "        font-size: 40pt;\n",
-       "        line-height: 100%;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 0em;\n",
-       "        margin-top: 0em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    } \n",
-       "    h2 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "        text-indent:1em;\n",
-       "    }\n",
-       "    .text_cell_render h2 {\n",
-       "        font-weight: 200;\n",
-       "        font-size: 20pt;\n",
-       "        font-style: italic;\n",
-       "        line-height: 100%;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 1.5em;\n",
-       "        margin-top: 0.5em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    } \n",
-       "    h3 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h3 {\n",
-       "        font-weight: 300;\n",
-       "        font-size: 18pt;\n",
-       "        line-height: 100%;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 0.5em;\n",
-       "        margin-top: 2em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    }\n",
-       "    h4 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h4 {\n",
-       "        font-weight: 300;\n",
-       "        font-size: 16pt;\n",
-       "        color:#447adb;\n",
-       "        margin-bottom: 0.5em;\n",
-       "        margin-top: 0.5em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    }\n",
-       "    h5 {\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "    }\n",
-       "    .text_cell_render h5 {\n",
-       "        font-weight: 300;\n",
-       "        font-style: normal;\n",
-       "        color: #1d3b84;\n",
-       "        font-size: 16pt;\n",
-       "        margin-bottom: 0em;\n",
-       "        margin-top: 1.5em;\n",
-       "        display: block;\n",
-       "        white-space: nowrap;\n",
-       "    }\n",
-       "    div.text_cell_render{\n",
-       "        font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "        line-height: 135%;\n",
-       "        font-size: 125%;\n",
-       "        width:750px;\n",
-       "        margin-left:auto;\n",
-       "        margin-right:auto;\n",
-       "        text-align:justify;\n",
-       "        text-justify:inter-word;\n",
-       "    }\n",
-       "    div.output_subarea.output_text.output_pyout {\n",
-       "        overflow-x: auto;\n",
-       "        overflow-y: scroll;\n",
-       "        max-height: 300px;\n",
-       "    }\n",
-       "    div.output_subarea.output_stream.output_stdout.output_text {\n",
-       "        overflow-x: auto;\n",
-       "        overflow-y: scroll;\n",
-       "        max-height: 300px;\n",
-       "    }\n",
-       "    div.output_subarea.output_html.rendered_html {\n",
-       "        overflow-x: scroll;\n",
-       "        max-width: 100%;\n",
-       "      /*  overflow-y: scroll; */\n",
-       "      /*  max-height: 300px;   */\n",
-       "    }\n",
-       "    code{\n",
-       "      font-size: 78%;\n",
-       "    }\n",
-       "    .rendered_html code{\n",
-       "        background-color: transparent;\n",
-       "        white-space: inherit;   \n",
-       "    }\n",
-       "    ul{\n",
-       "        /* color:#447adb; */  \n",
-       "        margin: 2em;\n",
-       "    }\n",
-       "    ul li{\n",
-       "        padding-left: 0.5em; \n",
-       "        margin-bottom: 0.5em; \n",
-       "        margin-top: 0.5em; \n",
-       "    }\n",
-       "    ul li li{\n",
-       "        padding-left: 0.2em; \n",
-       "        margin-bottom: 0.2em; \n",
-       "        margin-top: 0.2em; \n",
-       "    }\n",
-       "    ol{\n",
-       "        /* color:#447adb; */  \n",
-       "        margin: 2em;\n",
-       "    }\n",
-       "    ol li{\n",
-       "        padding-left: 0.5em; \n",
-       "        margin-bottom: 0.5em; \n",
-       "        margin-top: 0.5em; \n",
-       "    }\n",
-       "    /*.prompt{\n",
-       "        display: None;\n",
-       "    } */\n",
-       "    ul li{\n",
-       "        padding-left: 0.5em; \n",
-       "        margin-bottom: 0.5em; \n",
-       "        margin-top: 0.2em; \n",
-       "    }\n",
-       "    a:link{\n",
-       "       font-weight: bold;\n",
-       "       color:#447adb;\n",
-       "    }\n",
-       "    a:visited{\n",
-       "       font-weight: bold;\n",
-       "       color: #1d3b84;\n",
-       "    }\n",
-       "    a:hover{\n",
-       "       font-weight: bold;\n",
-       "       color: #1d3b84;\n",
-       "    }\n",
-       "    a:focus{\n",
-       "       font-weight: bold;\n",
-       "       color:#447adb;\n",
-       "    }\n",
-       "    a:active{\n",
-       "       font-weight: bold;\n",
-       "       color:#447adb;\n",
-       "    }\n",
-       "    .rendered_html :link {\n",
-       "       text-decoration: none; \n",
-       "    }\n",
-       "    .rendered_html :hover {\n",
-       "       text-decoration: none; \n",
-       "    }\n",
-       "    .rendered_html :visited {\n",
-       "      text-decoration: none;\n",
-       "    }\n",
-       "    .rendered_html :focus {\n",
-       "      text-decoration: none;\n",
-       "    }\n",
-       "    .rendered_html :active {\n",
-       "      text-decoration: none;\n",
-       "    }\n",
-       "    .warning{\n",
-       "        color: rgb( 240, 20, 20 )\n",
-       "    } \n",
-       "    hr {\n",
-       "      color: #f3f3f3;\n",
-       "      background-color: #f3f3f3;\n",
-       "      height: 1px;\n",
-       "    }\n",
-       "    blockquote{\n",
-       "      display:block;\n",
-       "      background: #f3f3f3;\n",
-       "      font-family: \"Open sans\",verdana,arial,sans-serif;\n",
-       "      width:610px;\n",
-       "      padding: 15px 15px 15px 15px;\n",
-       "      text-align:justify;\n",
-       "      text-justify:inter-word;\n",
-       "      }\n",
-       "      blockquote p {\n",
-       "        margin-bottom: 0;\n",
-       "        line-height: 125%;\n",
-       "        font-size: 100%;\n",
-       "        text-align: center;\n",
-       "      }\n",
-       "   /* element.style {\n",
-       "    } */  \n",
-       "</style>\n",
-       "<script>\n",
-       "    MathJax.Hub.Config({\n",
-       "                        TeX: {\n",
-       "                           extensions: [\"AMSmath.js\"]\n",
-       "                           },\n",
-       "                tex2jax: {\n",
-       "                    inlineMath: [ [\"$\",\"$\"], [\"\\\\(\",\"\\\\)\"] ],\n",
-       "                    displayMath: [ [\"$$\",\"$$\"], [\"\\\\[\",\"\\\\]\"] ]\n",
-       "                },\n",
-       "                displayAlign: \"center\", // Change this to \"center\" to center equations.\n",
-       "                \"HTML-CSS\": {\n",
-       "                    styles: {\".MathJax_Display\": {\"margin\": 4}}\n",
-       "                }\n",
-       "        });\n",
-       "</script>\n"
+       "<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1070,12 +859,51 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+     ]
     }
    ],
    "source": [
-    "# CSS styling within IPython notebook\n",
     "from IPython.display import display, HTML\n",
-    "display(HTML(open('../custom.css').read()))"
+    "\n",
+    "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
+    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
+    "\n",
+    "! pip install publisher --upgrade\n",
+    "import publisher\n",
+    "publisher.publish(\n",
+    "    's7_streaming_p1-first-stream', 'python/streaming_part1', 'Getting Started with Plotly Streaming',\n",
+    "    'Getting Started with Plotly Streaming',\n",
+    "    title = 'Getting Started with Plotly Streaming',\n",
+    "    thumbnail='', language='python',\n",
+    "    layout='getstart', has_thumbnail='false') "
    ]
   },
   {
