--- a/_posts/user_guide_python/s7_streaming.ipynb
+++ b/_posts/user_guide_python/s7_streaming.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\n",
+      "\u001b[33mYou are using pip version 7.1.2, however version 8.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -357,7 +367,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    's7_streaming.ipynb', 'python/intro_streaming', 'Getting Started with Plotly Streaming',\n",
+    "    's7_streaming.ipynb', 'python/intro_streaming/', 'Getting Started with Plotly Streaming',\n",
     "    'Getting Started with Plotly Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='', language='python',\n",
@@ -390,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
