--- a/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
+++ b/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
@@ -899,7 +899,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    's7_streaming_p1-first-stream', 'python/streaming_part1', 'Getting Started with Plotly Streaming',\n",
+    "    's7_streaming_p1-first-stream', 'python/streaming_part1/', 'Getting Started with Plotly Streaming',\n",
     "    'Getting Started with Plotly Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='', language='python',\n",
