--- a/_posts/user_guide_python/s7_streaming.ipynb
+++ b/_posts/user_guide_python/s7_streaming.ipynb
@@ -344,15 +344,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\n",
-      "\u001b[33mYou are using pip version 7.1.2, however version 8.0.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
       "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
       "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
@@ -371,7 +371,7 @@
     "    'Getting Started with Plotly Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='', language='python',\n",
-    "    layout='getstart', has_thumbnail='false') "
+    "    layout='user-guide', has_thumbnail='false') "
    ]
   },
   {
