Updated scattergl timeseries example

--- a/_posts/r/scattergl/2016-02-25-scattergl.Rmd
+++ b/_posts/r/scattergl/2016-02-25-scattergl.Rmd
@@ -9,10 +9,10 @@ page_type: example_index
 has_thumbnail: true
 display_as: get_request
 output: 
-  html_document: 
-    highlight: null
-    keep_md: yes
-    theme: null
+html_document: 
+highlight: null
+keep_md: yes
+theme: null
 ---
 
 ```{r, echo = FALSE, message=FALSE}
@@ -90,28 +90,20 @@ p
 <iframe src="https://plot.ly/~RPlotBot/2867/randwalkn-nrand-vs-1nrand/" width="100%" height=700 scrolling="no" seamless="seamless"></iframe>
 
 
-### WebGL for time series data
+### WebGL for time series data (24381 points)
 ```{r}
 library(plotly)
 
 # Read some weather data
-df <- read.csv('weather-data.csv')
+df <- read.csv('https://cdn.rawgit.com/plotly/documentation/source/_posts/r/scattergl/weather-data.csv')
 
 # Convert to dates
 df$Date <- zoo::as.Date(df$Date, format =  "%m/%d/%Y")
 
-# Plot using plotly
-
-plot_bgcolor <- "34495E"
-paper_bgcolor <- "E4F1FE"
-
 p <- plot_ly(df, x = Date, y = Mean_TemperatureC, name = "Mean Temp.", type = "scattergl", 
-             marker = list(color = "F6FFD2")) %>% 
+             marker = list(color = "#3b3b9e")) %>% 
   layout(title = "Mean Temparature in Seattle (1948 - 2015)",
-         yaxis = list(title = "Temperature (<sup>o</sup>C)"),
-         plot_bgcolor = plot_bgcolor, 
-         paper_bgcolor = paper_bgcolor)
-
+         yaxis = list(title = "Temperature (<sup>o</sup>C)"))
 p
 ```
 
@@ -123,4 +115,14 @@ See https://plot.ly/python/reference/#scattergl for more information
 
 
 
+```{r, eval = F, echo = F}
+# Test only
+# scattertype = "scatter"
+p <- plot_ly(df, x = Date, y = Mean_TemperatureC, name = "Mean Temp.", type = scattertype, 
+             marker = list(color = "#3b3b9e")) %>% 
+  add_trace(x = Date, y = Min_TemperatureC, name = "Min Temp", type = scattertype, line = list(color = 'transparent'), fill = "tonexty", fillcolor = "transparent") %>% 
+  add_trace(x = Date, y = Max_TemperatureC, name = "Max Temp", type = scattertype, line = list(color = 'transparent'), fill = "tonexty", fillcolor = toRGB("#3b3b9e", alpha = 0.3)) %>% 
+  layout(title = "Mean Temparature in Seattle (1948 - 2015)",
+         yaxis = list(title = "Temperature (<sup>o</sup>C)"))
 
+```
