updated styling and links

--- a/_posts/user_guide_python/s7_streaming.ipynb
+++ b/_posts/user_guide_python/s7_streaming.ipynb
@@ -31,9 +31,9 @@
    "source": [
     "Section 7 is divided, into separate notebooks, as follows:\n",
     "\n",
-    "* [7.0 Streaming API introduction](https://plot.ly/python/streaming-tutorial)\n",
+    "* [7.0 Streaming API introduction](https://plot.ly/python/intro_streaming)\n",
     "\n",
-    "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming-line-tutorial)"
+    "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming_part1)"
    ]
   },
   {
@@ -271,23 +271,13 @@
     "\n",
     "Here are the links to the subsections' notebooks:\n",
     "\n",
+    "* [7.0 Streaming API introduction](https://plot.ly/python/intro_streaming)\n",
     "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming-line-tutorial)\n",
     "\n",
     "In addition, here is a notebook of another Plotly streaming plot:\n",
     "\n",
     "* <a href=\"http://nbviewer.ipython.org/gist/empet/a03885a54c256a21c514\" target=\"_blank\">Streaming the Poisson Pareto Burst Process</a> by \n",
     "<a href=\"https://github.com/empet\" target=\"_blank\">Emilia Petrisor</a>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h4 style=\"font-size:14pt;\">Go to User Guide's\n",
-    "\n",
-    "[homepage](https://plot.ly/python/user-guide) </h4>\n",
-    "    \n",
-    "<hr>"
    ]
   },
   {
@@ -303,7 +293,7 @@
     "\n",
     "Reach us here at: <a href=\"https://community.plot.ly\" target=\"_blank\">Plotly Community</a>\n",
     "\n",
-    "<h4> Want to know what's going on at Plotly? </h4>\n",
+    "<h4> What's going on at Plotly? </h4>\n",
     "Check out our twitter: \n",
     "<a href=\"https://twitter.com/plotlygraphs\" target=\"_blank\">@plotlygraphs</a>\n",
     "\n"
@@ -311,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -345,16 +335,6 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
