--- a/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
+++ b/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
@@ -31,9 +31,9 @@
    "source": [
     "Section 7 is divided, into separate notebooks, as follows:\n",
     "\n",
-    "* [7.0 Streaming API introduction](https://plot.ly/python/streaming-tutorial)\n",
+    "* [7.0 Streaming API introduction](https://plot.ly/python/intro_streaming)\n",
     "\n",
-    "* [7.1 A First Plotly Streaming Plot](https://plot.ly/python/streaming-line-tutorial)"
+    "* [7.1 A First Plotly Streaming Plot](https://plot.ly/python/streaming_part1)"
    ]
   },
   {
@@ -802,24 +802,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Subsections of section 7:\n",
+    "Here are the links to the subsections' notebooks:\n",
     "\n",
-    "* [7.0 Streaming API introduction](https://plot.ly/python/streaming-tutorial)\n",
-    "\n",
+    "* [7.0 Streaming API introduction](https://plot.ly/python/intro_streaming)\n",
     "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming-line-tutorial)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "<h4 style=\"font-size:14pt;\">Go to User Guide's\n",
-    "\n",
-    "[homepage](https://plot.ly/python/user-guide) </h4>\n",
-    "    \n",
-    "<hr>"
    ]
   },
   {
@@ -835,7 +821,7 @@
     "\n",
     "Reach us here at: <a href=\"https://community.plot.ly\" target=\"_blank\">Plotly Community</a>\n",
     "\n",
-    "<h4> Want to know what's going on at Plotly? </h4>\n",
+    "<h4> What's going on at Plotly? </h4>\n",
     "Check out our twitter: \n",
     "<a href=\"https://twitter.com/plotlygraphs\" target=\"_blank\">@plotlygraphs</a>\n",
     "\n"
@@ -843,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -878,16 +864,6 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
-     ]
     }
    ],
    "source": [
@@ -903,7 +879,7 @@
     "    'Getting Started with Plotly Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='', language='python',\n",
-    "    layout='getstart', has_thumbnail='false') "
+    "    layout='user-guide', has_thumbnail='false') "
    ]
   },
   {
