--- a/_posts/user_guide_python/user-g.ipynb
+++ b/_posts/user_guide_python/user-g.ipynb
@@ -62,12 +62,14 @@
     "    \n",
     "The user guide will be split into the following sections:\n",
     "\n",
-    "0. [Getting Started with Plotly](https://plot.ly/python/overview)\n",
-    "1. [Line and Scatter Plots](https://plot.ly/python/line-and-scatter-plots-tutorial)\n",
-    "2. [Bar Charts](https://plot.ly/python/bar-charts-tutorial)\n",
-    "3. [Bubble Charts](https://plot.ly/python/bubble-charts-tutorial)\n",
-    "4. [Histograms and Box Plots](https://plot.ly/python/histograms-and-box-plots-tutorial)\n",
-    "\n",
+    "- Section 0. [Getting Started with Plotly](https://plot.ly/python/overview)\n",
+    "- Section 1. [Line and Scatter Plots](https://plot.ly/python/line-and-scatter-plots-tutorial)\n",
+    "- Section 2. [Bar Charts](https://plot.ly/python/bar-charts-tutorial)\n",
+    "- Section 3. [Bubble Charts](https://plot.ly/python/bubble-charts-tutorial)\n",
+    "- Section 4. [Histograms and Box Plots](https://plot.ly/python/histograms-and-box-plots-tutorial)\n",
+    "- Section 5. [Heatmaps, Contours and 2D Histograms](https://plot.ly/python/heatmaps-contours-and-2dhistograms-tutorial)\n",
+    "- Section 6. [Converting Mat\n",
+    "- Section 7. [Streaming API](https://plot.ly/python/intro_streaming)\n",
     "[Appendix A: Getting Started with Python](https://plot.ly/python/python-tutorial)"
    ]
   },
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +141,7 @@
     "    'Getting Started with Plotly for Python',\n",
     "    title = 'Getting Started Plotly for Python',\n",
     "    thumbnail='', language='python',\n",
-    "    layout='getstart', has_thumbnail='false') "
+    "    layout='user-guide', has_thumbnail='false') "
    ]
   },
   {
