--- a/_posts/user_guide_python/user-g.ipynb
+++ b/_posts/user_guide_python/user-g.ipynb
@@ -68,7 +68,7 @@
     "- Section 3. [Bubble Charts](https://plot.ly/python/bubble-charts-tutorial)\n",
     "- Section 4. [Histograms and Box Plots](https://plot.ly/python/histograms-and-box-plots-tutorial)\n",
     "- Section 5. [Heatmaps, Contours and 2D Histograms](https://plot.ly/python/heatmaps-contours-and-2dhistograms-tutorial)\n",
-    "- Section 6. [Converting Mat\n",
+    "- Section 6. [Converting Matplotlib Figures to Plotly](https://plot.ly/python/matplotlib-to-plotly-tutorial)\n",
     "- Section 7. [Streaming API](https://plot.ly/python/intro_streaming)\n",
     "[Appendix A: Getting Started with Python](https://plot.ly/python/python-tutorial)"
    ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
