--- a/_posts/user_guide_python/user-g.ipynb
+++ b/_posts/user_guide_python/user-g.ipynb
@@ -70,7 +70,7 @@
     "- Section 5. [Heatmaps, Contours and 2D Histograms](https://plot.ly/python/heatmaps-contours-and-2dhistograms-tutorial)\n",
     "- Section 6. [Converting Matplotlib Figures to Plotly](https://plot.ly/python/matplotlib-to-plotly-tutorial)\n",
     "- Section 7. [Streaming API](https://plot.ly/python/intro_streaming)\n",
-    "[Appendix A: Getting Started with Python](https://plot.ly/python/python-tutorial)"
+    "- [Appendix A: Getting Started with Python](https://plot.ly/python/python-tutorial)"
    ]
   },
   {
