--- a/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
+++ b/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
@@ -805,7 +805,7 @@
     "Here are the links to the subsections' notebooks:\n",
     "\n",
     "* [7.0 Streaming API introduction](https://plot.ly/python/intro_streaming)\n",
-    "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming-line-tutorial)"
+    "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming_part1)"
    ]
   },
   {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -875,7 +875,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    's7_streaming_p1-first-stream', 'python/streaming_part1/', 'Getting Started with Plotly Streaming',\n",
+    "    's7_streaming_p1-first-stream', 'python/streaming_part1//', 'Getting Started with Plotly Streaming',\n",
     "    'Getting Started with Plotly Streaming',\n",
     "    title = 'Getting Started with Plotly Streaming',\n",
     "    thumbnail='', language='python',\n",
