updated grammar and permalink

--- a/_posts/user_guide_python/user-g.ipynb
+++ b/_posts/user_guide_python/user-g.ipynb
@@ -24,13 +24,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "\n",
-    "This user guide will provide an in-depth overview of the steps required to get you first `Plotly` graph up and running, as well more specific and thorough guides on a few of our most popular chart types. Hopefully by the end of the user guide you will have a good idea of how Plotly graphs are defined and constructed, and be on your way to creating amazing data visualizations of your own. "
+    "This user guide will provide an in-depth overview of the steps required to get your first `Plotly` graph up and running, as well as more specific and thorough guides on a few of our most popular graph types. Hopefully by the end of the user guide you will have a good idea of how Plotly graphs are defined and constructed, and be on your way to creating amazing data visualizations of your own. "
    ]
   },
   {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'user-g.ipynb', 'python/user-g', 'Getting Started Plotly for Python',\n",
+    "    'user-g.ipynb', 'python/userguide//', 'Getting Started Plotly for Python',\n",
     "    'Getting Started with Plotly for Python',\n",
     "    title = 'Getting Started Plotly for Python',\n",
     "    thumbnail='', language='python',\n",
