--- a/_posts/user_guide_python/s7_streaming.ipynb
+++ b/_posts/user_guide_python/s7_streaming.ipynb
@@ -20,9 +20,7 @@
    "source": [
     "Welcome to Plotly's Python API User Guide. \n",
     "\n",
-    "> Links to the other sections are on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) <br>\n",
-    "The Github repository is available \n",
-    "<a href=\"https://github.com/plotly/python-user-guide\" target=\"_blank\">here</a>"
+    "> Links to the other sections are on the User Guide's [homepage](https://plot.ly/python/userguide)"
    ]
   },
   {
@@ -97,13 +95,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See the User Guide's <a href=\"https://plot.ly/python/user-guide#Installation-guidelines\" target=\"_blank\">homepage</a> for more info on installation and upgrading. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<hr>\n",
     "\n",
     "Plotly's Streaming API enables your Plotly plots to update in real-time, without refreshing your browser. In other words, users can *continuously* send data to Plotly's servers and visualize this data in *real-time*.\n",
@@ -112,7 +103,7 @@
     "\n",
     "With Ploly's Streaming API:\n",
     "\n",
-    "> Everyone looking at a Plotly streaming plot sees the same data, updating at the same time. Like all Plotly plots, Plotly streaming plots are immediately shareable by shortlink, embedded in website, or an IPython notebook. Owners of the Plotly plot can edit the plot with the Plotly web GUI while all viewers will see these changes live. \n",
+    "> Everyone looking at a Plotly streaming plot sees the same data updating at the same time. Like all Plotly plots, Plotly streaming plots are immediately shareable by shortlink, embedded in website, or in an IPython notebook. Owners of the Plotly plot can edit the plot with the Plotly web GUI and all viewers will see these changes live. \n",
     "\n",
     "And for the skeptical among us, *it's fast*: plots update up to 20 times per second.\n",
     "\n",
@@ -151,21 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are not familiar with credentials files, refer to the User Guide's <a href=\"https://plot.ly/python/user-guide#Step-6\" target=\"_blank\">homepage</a>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##### What do Plotly streaming plots look like?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This"
    ]
   },
   {
@@ -217,17 +194,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Making Plotly streaming plots requires no modifications to the sign in process; however, users must generate stream *tokens* or *ids*. To do so, first sign in on <a href=\"https://plot.ly\" target=\"_blank\">plot.ly</a>. Once that is done, click on the *Settings* button in the upper-right corner of the page:\n",
+    "Making Plotly streaming plots requires no modifications to the sign in process; however, users must generate stream *tokens* or *ids*. To do so, first sign-in to <a href=\"https://plot.ly\" target=\"_blank\">plot.ly</a>. Once that is done, click on the *Settings* button in the upper-right corner of the page:\n",
     "\n",
     "  <img src=\"http://i.imgur.com/RNExysW.png\" style=\"margin-top:1em; margin-bottom:1em\" />\n",
     "\n",
-    "<p style=\"margin-top:1.5em;,margin-bottom:1.5em\">Under the *Stream Tokens* tab, click on the *Generate Token* button:</p>\n",
+    "<p style=\"margin-top:1.5em;,margin-bottom:1.5em\">Under the <b>Stream Tokens</b> tab, click on the <b>Generate Token</b> button:</p>\n",
     "\n",
     "<img src=\"http://i.imgur.com/o5Uguye.png\" />\n",
     "\n",
     "And there you go, you have generated a stream token. Please note that:\n",
     "\n",
-    "> You must generate one stream token per **trace** to be plotted in each of your Plotly streaming plots.\n",
+    "> You must generate one stream token per **trace** in your Plotly streaming plot.\n",
     "\n",
     "If you are looking to run this notebook with you own account, please generate 4 unique stream tokens and add them to your credentials file by entering:\n",
     "\n",
@@ -267,7 +244,7 @@
    "source": [
     "We are now ready to start making Plotly streaming plots!\n",
     "\n",
-    "The content of this section has been divided into separate IPython notebooks as loading multiple streaming at once can cause performance slow downs on some internet connections.\n",
+    "The content of this section has been divided into separate IPython notebooks as loading multiple streaming plots at once can cause performance slow downs on some internet connections.\n",
     "\n",
     "Here are the links to the subsections' notebooks:\n",
     "\n",
@@ -301,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
