--- a/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
+++ b/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
@@ -109,13 +109,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are not familiar with credentials files, refer to the User Guide's <a href=\"https://plot.ly/python/user-guide#Step-6\" target=\"_blank\">homepage</a>."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Finally, retrieve the stream ids in our credentials file as set up in <a href=\"https://plot.ly/python/streaming-tutorial#Get-your-stream-tokens\" target=\"_blank\">subsection 7.1</a>:"
    ]
   },
@@ -147,11 +140,11 @@
     "\n",
     "* A stream link object (`py.Stream`).\n",
     "\n",
-    "The stream id object is a graph object that embeds a particular stream id to each of your plot's traces (one for each). As all graph objects, the stream id object is equipped with extensive `help()` documentation, key validation and a nested update method. In brief, the stream id object initializes the connection between a trace and a data stream.\n",
+    "The stream id object is a graph object that embeds a particular stream id to each of your plot's traces. As all graph objects, the stream id object is equipped with extensive `help()` documentation, key validation and a nested update method. In brief, the stream id object initializes the connection between a trace in your Plotly graph and a data stream(for that trace).\n",
     "\n",
-    "Meanwhile, the stream link object, as all objects in the `plotly.plotly` Plotly module links content in your Python/IPython session to Plotly's servers. More precisely, it is the interface that updates the data in the plotted traces in real-time(as identified with the unique stream id used in the corresponding stream id object).\n",
+    "Meanwhile, the stream link object, like all objects in the `plotly.plotly` module, links content in your Python/IPython session to Plotly's servers. More precisely, it is the interface that updates the data in the plotted traces in real-time(as identified with the unique stream id used in the corresponding stream id object).\n",
     "\n",
-    "If you find the `Stream`/`py.Stream` terminalogy too confusing --- and you do not mind not having access to Plotly graph objects' methods --- you can forgo the use of the stream id object and substitute it by `dict()` in the following examples. "
+    "If you find the `Stream`/`py.Stream` terminalogy too confusing --- and you do not mind not having access to the methods associated with Plotly graph objects' --- you can forgo the use of the stream id object and substitute it by a python `dict()` in the following examples. "
    ]
   },
   {
@@ -411,7 +404,7 @@
     }
    ],
    "source": [
-    "help(Stream)  # call help()!"
+    "help(Stream)  # call help() to see the specifications of the Stream object!"
    ]
   },
   {
@@ -632,8 +625,8 @@
    },
    "outputs": [],
    "source": [
-    "# (@) Make instance of the Stream link object, \n",
-    "#     with same stream id as Stream id object\n",
+    "# (@) Make instance of the `Stream link` object \n",
+    "#     with the same stream id as  the `Stream Id` object\n",
     "s = py.Stream(stream_id)\n",
     "\n",
     "# (@) Open the stream\n",
@@ -695,7 +688,7 @@
    "source": [
     "A stream of data totalling 200 points is sent to Plotly's servers in real-time. \n",
     "\n",
-    "Whatching this unfold in an opened plot.ly tab looks something like (in the old UI):"
+    "Watching this unfold in an opened plot.ly tab looks something like (in the old UI):"
    ]
   },
   {
@@ -736,9 +729,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It took Plotly around 15 seconds to plot the 200 data points sent in the stream. After that  the generated plot looks like any other Plotly plot.\n",
+    "It took Plotly around 15 seconds to plot the 200 data points sent in the data stream. After that, the generated plot looks like any other Plotly plot.\n",
     "\n",
-    "That said, if you have enough computer resources to let a server running indefinitely, why not have \n",
+    "With that said, if you have enough computer resources to let a server run indefinitely, why not have \n",
     "\n",
     "    >>> while True: \n",
     "\n",
@@ -782,16 +775,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anyone can view your streaming graph in real-time. Viewers see the same data at the same time (try it! Open up this notebook up in two different browser windows and observer\n",
+    "Anyone can view your streaming graph in real-time. All viewers will see the same data simultaneously (try it! Open up this notebook up in two different browser windows and observer\n",
     "that the graphs are plotting identical data!).\n",
     "\n",
     "Simply put, Plotly's streaming API is awesome!\n",
     "\n",
     "In brief: to make a Plotly streaming plot:\n",
     "\n",
-    "1. Make a stream id object (`Stream` in the `plotly.graph_objs` module) containing the `stream id`(which are found in the **settings** of your Plotly account) and the maximum number of points to be keep on screen (which is optional).\n",
+    "1. Make a stream id object (`Stream` in the `plotly.graph_objs` module) containing the `stream id`(which is found in the **settings** of your Plotly account) and the maximum number of points to be keep on screen (which is optional).\n",
     "\n",
-    "2. Provide the stream id obect to as the key-value for the `stream` attribute of your trace object. \n",
+    "2. Provide the stream id obect as the key value for the `stream` attribute of your trace object. \n",
     "\n",
     "3. Make a stream link object (`py.Stream`) containing the same stream id as the stream id object and open the stream with the `.open()` method.\n",
     "\n",
