--- a/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
+++ b/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
@@ -782,13 +782,13 @@
     "\n",
     "In brief: to make a Plotly streaming plot:\n",
     "\n",
-    "1. Make a stream id object (`Stream` in the `plotly.graph_objs` module) containing the `stream id`(which is found in the **settings** of your Plotly account) and the maximum number of points to be keep on screen (which is optional).\n",
+    "1. Make a `stream id object` (`Stream` in the `plotly.graph_objs` module) containing the `stream id`(which is found in the **settings** of your Plotly account) and the maximum number of points to be keep on screen (which is optional).\n",
     "\n",
-    "2. Provide the stream id obect as the key value for the `stream` attribute of your trace object. \n",
+    "2. Provide the `stream id object` as the key value for the `stream` attribute in your trace object. \n",
     "\n",
-    "3. Make a stream link object (`py.Stream`) containing the same stream id as the stream id object and open the stream with the `.open()` method.\n",
+    "3. Make a `stream link object` (`py.Stream`) containing the same stream id as the `stream id object` and open the stream with the `.open()` method.\n",
     "\n",
-    "4. Write data to the stream link object with the `.write()` method. When done, close the stream with the `.close()` method.\n"
+    "4. Write data to the `stream link object` with the `.write()` method. When done, close the stream with the `.close()` method.\n"
    ]
   },
   {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
