removed github link

--- a/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
+++ b/_posts/user_guide_python/s7_streaming_p1-first-stream.ipynb
@@ -20,9 +20,7 @@
    "source": [
     "Welcome to Plotly's Python API User Guide. \n",
     "\n",
-    "> Links to the other sections are on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) <br>\n",
-    "The Github repository is available \n",
-    "<a href=\"https://github.com/plotly/python-user-guide\" target=\"_blank\">here</a>"
+    "> Links to the other sections are on the User Guide's [homepage](https://plot.ly/python/user-guide#Table-of-Contents:) "
    ]
   },
   {
@@ -822,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
