--- a/_posts/user_guide_python/s7_streaming_part2.ipynb
+++ b/_posts/user_guide_python/s7_streaming_part2.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Section 7.0: Introduction to Plotly's Streaming API"
+    "# Plotly's Python API User Guide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section 7: Plotly's Streaming API"
    ]
   },
   {
@@ -24,7 +31,9 @@
     "\n",
     "* [7.0 Streaming API introduction](https://plot.ly/python/intro_streaming)\n",
     "\n",
-    "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming_part1)"
+    "* [7.1 A first Plotly streaming plot](https://plot.ly/python/streaming_part1)\n",
+    "\n",
+    "* [7.2 "
    ]
   },
   {
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -305,18 +314,6 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:58: UserWarning: Your URL has more than 2 parts... are you sure?\n",
-      "  warnings.warn('Your URL has more than 2 parts... are you sure?')\n"
      ]
     }
    ],
