some styling updates

--- a/_posts/user_guide_python/s7_streaming.ipynb
+++ b/_posts/user_guide_python/s7_streaming.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Welcome to Plotly's Python API User Guide. \n",
     "\n",
-    "> Links to the other sections are on the User Guide's [homepage](https://plot.ly/python/userguide)"
+    "> Links to the other sections can be found on the User Guide's [homepage](https://plot.ly/python/userguide)"
    ]
   },
   {
