--- a/_posts/user_guide_python/user-g.ipynb
+++ b/_posts/user_guide_python/user-g.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "    \n",
-    "The user guide will be split into the following sections:\n",
+    "The user guide is split into the following sections:\n",
     "\n",
     "- Section 0. [Getting Started with Plotly](https://plot.ly/python/overview)\n",
     "- Section 1. [Line and Scatter Plots](https://plot.ly/python/line-and-scatter-plots-tutorial)\n",
