change link for sec0

--- a/_posts/user_guide_python/user-g.ipynb
+++ b/_posts/user_guide_python/user-g.ipynb
@@ -62,7 +62,7 @@
     "    \n",
     "The user guide is split into the following sections:\n",
     "\n",
-    "- Section 0. [Getting Started with Plotly](https://plot.ly/python/overview)\n",
+    "- Section 0. [Getting Started with Plotly](https://plot.ly/python/getting_started)\n",
     "- Section 1. [Line and Scatter Plots](https://plot.ly/python/line-and-scatter-plots-tutorial)\n",
     "- Section 2. [Bar Charts](https://plot.ly/python/bar-charts-tutorial)\n",
     "- Section 3. [Bubble Charts](https://plot.ly/python/bubble-charts-tutorial)\n",
