Updated cufflinks+colorlover example

--- a/_posts/pandas/colorlover/colorlover-with-pandas.ipynb
+++ b/_posts/pandas/colorlover/colorlover-with-pandas.ipynb
@@ -210,12 +210,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List of all the colorscales supported by `colorlover` is available [here](http://nbviewer.jupyter.org/gist/jackparmer/4696226c9b6b931bbdf6#All-colors)"
+    "List of all the colorscales supported by `colorlover` is available <a href=\"http://nbviewer.jupyter.org/gist/jackparmer/4696226c9b6b931bbdf6#All-colors\" target=\"_blank\">Here</a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
